--- a/3.Django/20191010.md
+++ b/3.Django/20191010.md
@@ -7,5 +7,10 @@
 - __review__
   - `mkdir 폴더이름`
   - `django-admin startproject 폴더이름 폴더위치(현재경로일 경우 .)`
-  - 
+
+pip install pilkit django-imagekit
+
+
+
+INSTALLED_APPS 에 imagekit 추가
 
