--- a/3.Django/20191024_배포.md
+++ b/3.Django/20191024_배포.md
@@ -23,7 +23,7 @@ django_heroku.settings(locals())
 
 
 
-manage.py  와 같은 위치에 __`Profile`__ 파일 생성(확장자 없음)
+manage.py  와 같은 위치에 __`Procfile`__ 파일 생성(확장자 없음)
 
 아래와 같은 내용을 추가(프로젝트이름.wsgi)
 
